--- a/main.ipynb
+++ b/main.ipynb
@@ -6,25 +6,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%conda install -c conda-forge kaggle"
+    "%pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dir = 'train/train'\n",
+    "test_dir = 'test/test'\n",
+    "train_gt_dir = 'train_gt/train_gt/'\n",
+    "\n",
+    "labels = {\n",
+    "    0 : 'neoplastic',\n",
+    "    1 : 'non-neoplastic',\n",
+    "    2 : 'background'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'kaggle' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\hokag\\Documents\\GitHub\\unet-semantic-segmentation\\main.ipynb Cell 4\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/hokag/Documents/GitHub/unet-semantic-segmentation/main.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m plt\u001b[39m.\u001b[39mfigure(\u001b[39m10\u001b[39m, figsize\u001b[39m=\u001b[39m(\u001b[39m20\u001b[39m, \u001b[39m12\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/hokag/Documents/GitHub/unet-semantic-segmentation/main.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m i, img \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(os\u001b[39m.\u001b[39mlistdir(train_dir)[:\u001b[39m10\u001b[39m]):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/hokag/Documents/GitHub/unet-semantic-segmentation/main.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     label \u001b[39m=\u001b[39m labels[\u001b[39mint\u001b[39m(img\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m_\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m1\u001b[39m])]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/hokag/Documents/GitHub/unet-semantic-segmentation/main.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     img_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(train_dir, img)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/hokag/Documents/GitHub/unet-semantic-segmentation/main.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     img \u001b[39m=\u001b[39m Image\u001b[39m.\u001b[39mopen(img_path)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 2000x1200 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "!kaggle competitions download -c bkai-igh-neopolyp"
+    "plt.figure(10, figsize=(20, 12))\n",
+    "\n",
+    "for i, img in enumerate(os.listdir(train_dir)[:10]):\n",
+    "    label = labels[int(img.split('_')[1])]\n",
+    "    img_path = os.path.join(train_dir, img)\n",
+    "    img = Image.open(img_path)\n",
+    "    plt.subplot(2, 5, i+1)\n",
+    "    plt.imshow(img)\n",
+    "    plt.title(label)\n",
+    "\n",
+    "plt.tight_layout()"
    ]
   }
  ],
